--- a/simpleCalculations.html
+++ b/simpleCalculations.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Simple Calculations</title>
     <style>
@@ -30,9 +29,8 @@
             display: block;
             clear: both;
         }
-    </style>
+    </style>  
 </head>
-
 <body>
     <h1>Simple Calculations</h1>
     <p>Read the directions and answer the following problems.</p>
@@ -100,5 +98,5 @@
         <p id="tips"></p>
 
 </body>
-
+<script src="SimpleCalculation.js"></script>
 </html>
